--- a/package.json
+++ b/package.json
@@ -23,18 +23,20 @@
   "dependencies": {
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.5.1",
+    "@nestjs/graphql": "^7.5.5",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.0",
     "apollo-server-express": "^2.15.1",
+    "dataloader": "^2.0.0",
     "graphql": "^15.3.0",
-    "graphql-tools": "^6.0.12",
+    "graphql-tools": "^6.0.13",
     "migrationjs": "^0.2.5",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.25"
+    "typeorm": "^0.2.25",
+    "ws": "^7.3.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
