--- a/pokemon-tcg-data/cards/Mysterious Treasures.json
+++ b/pokemon-tcg-data/cards/Mysterious Treasures.json
@@ -4006,7 +4006,7 @@
         "text": "Flip a coin. If heads, prevent all damage done to Chansey by attacks during your opponent's next turn."
       },
       {
-        "name": "Double-edge",
+        "name": "Double-Edge",
         "cost": [
           "Colorless",
           "Colorless",
